--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <section id="solucion">
         <h3 class="section-title">Solución Gráfica</h3>
         <p style="color:var(--muted)">A continuación se muestra la representación visual de la solución al problema planteado:</p>
-        <img src="solucion.png" alt="Solución del problema de inventarios de Apple Inc." class="solution">
+        <img src="problema.png" alt="Solución del problema de inventarios de Apple Inc." class="solution">
       </section>
     </main>
 
